--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "autoprefixer": "^10.4.20",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-type-animation": "^3.2.0"
-    
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
